# N_notation_flake8

./: .gitignore  README-en.md  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
nflake8/: __init__.py  phasalo.txt  plugin.py
nflake8/checks/: ast.py  project.py  tokens.py
nflake8/core/: errors.py  patterns.py  root.py  suggestions.py  types.py
nflake8/rules/: ast_utils.py  base.py  class_names.py  func_names.py  member_names.py  no_docstring.py  no_type_annotations.py  param_names.py  receiver_name.py  registry.py  var_names.py
nflake8/testdata/: example_bad.py  n1.py  n2.py
tests/: helpers.py  test_class_names.py  test_func_names.py  test_import_aliases.py  test_member_names.py  test_no_docstring.py  test_no_type_annotations.py  test_param_names.py  test_project_directories.py  test_receiver_name.py  test_var_names.py
