[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n-notation"
version = "1.1.0"
description = "Flake8 plugin enforcing N notation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phasalo" }]
dependencies = ["flake8>=6.0.0"]

[project.urls]
Homepage = "https://github.com/Phasalo/N_notation"

[project.entry-points."flake8.extension"]
NNO = "nflake8.plugin:NNotationChecker"

[tool.setuptools.packages.find]
include = ["nflake8*"]


[tool.setuptools.package-data]
nflake8 = ["phasalo.txt"]
